# AptivEye

./: .env.example  .gitignore  pyproject.toml
aptiveye.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: __init__.py  model_routing.py  settings.py
config/prompts/: asset_discovery.yaml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md
src/: __init__.py  cli.py
src/agent/: __init__.py  fallback.py  fofa_planner.py  graph.py  router.py  state.py  supervisor.py  worker.py
src/agent/planner/: __init__.py  base.py  fofa.py
src/gateway/: __init__.py  cost_tracker.py  rate_limiter.py  router.py
src/gateway/providers/: __init__.py  anthropic.py  deepseek.py  local.py  openai.py
src/memory/: __init__.py  session_memory.py  vector_store.py
src/sandbox/: __init__.py
src/security/: __init__.py  audit.py  hitl.py  loop_detector.py  policy_engine.py  prompt_guard.py  sanitizer.py  scope.py
src/shell/: __init__.py  engine.py  formatting.py  session.py
src/tools/: __init__.py  registry.py
src/tools/asset/: __init__.py  apps.py  company.py  digital_assets.py  emails.py  fingerprint.py  icp.py  lingling.py  models.py  nmap.py  server.py  subdomain.py  wechat.py  whois.py  zoomeye.py
src/tools/asset/fofa/: __init__.py  client.py  handler.py  parser.py  utils.py
src/utils/: __init__.py  exceptions.py  logger.py  parsing.py  validators.py
