[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aptiveye"
version = "0.1.0"
description = "AI-powered Network Security Agent — autonomous asset discovery, vulnerability scanning, CVE matching, code audit, and remediation reporting."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AptivEye Team"},
]
keywords = ["security", "agent", "ai", "vulnerability", "pentest", "langgraph"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # --- Agent Framework ---
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",

    # --- MCP Protocol ---
    "mcp>=1.0.0",

    # --- Data & Validation ---
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",

    # --- Memory & Knowledge ---
    "chromadb>=0.5.0",

    # --- CLI ---
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",

    # --- Logging & Telemetry ---
    "loguru>=0.7.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",

    # --- Sandbox ---
    "docker>=7.0.0",

    # --- Async HTTP ---
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

local-llm = [
    "ollama>=0.4.0",
]

production = [
    "qdrant-client>=1.9.0",
]

all = [
    "aptiveye[dev,local-llm,production]",
]

[project.scripts]
aptiveye = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.setuptools.package-data]
config = ["prompts/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
